[gd_scene load_steps=5 format=2]

[ext_resource path="res://Theme/HUDTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/UI/HUD.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterText:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "meteor_shower_alert"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("CenterText:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.3, 6.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 53 ]
}

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Objectives" type="VBoxContainer" parent="."]
margin_right = 383.0
margin_bottom = 250.0

[node name="Warnings" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -250.0
margin_right = 383.0
alignment = 2

[node name="CenterText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.5
margin_top = -70.5
margin_right = 191.5
margin_bottom = -9.5
text = "alert: meteor shower incoming
return to the rocket to evacuate"
percent_visible = 0.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/meteor_shower_alert = SubResource( 1 )

[node name="CountdownTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
